# QingKongFramework

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  README_CN.md  Readme.md  manage.py  pyproject.toml  requirements.txt  setup-pure.py
.gitea/workflows/: build.yaml
.trae/rules/: project_rules.md
agents/: filterset-builder.md  viewset-builder.md
apps/fake/: apps.py  views.py
apps/main/: apps.py  asgi.py  main.py  models.py
apps/user/: apps.py  main.py
common/: settings.py
core/: db.py  init.py  settings.py
deploy/: Dockerfile  Dockerfile.debian  Dockerfile.optimize  build.sh  remove_dev_requirements.sh
docs/ai/: API-Development.md  API-Gateway-and-Load-Balancing.md  API-View-Mixins.md  Application-Configuration.md  Application-Discovery-and-Structure.md  Authentication-and-Authorization.md  BaseModel-Extensions.md  Caching-System.md  Command-Line-Interface.md  Core-Data-Layer.md  Data-Loading-and-Fixtures.md  Database-Commands.md  Database-Functions-and-Indexing.md  Database-Management.md  Database-Migrations-and-Schema.md  Deployment-with-Docker.md  Development-Tools.md  Development-and-Utility-Commands.md  FilterSet-System.md  Framework-Architecture.md  Infrastructure.md  ModelSerializer-System.md  Overview.md  (+6 more)
fastapp/: __init__.py  conf.py  exception_handlers.py  fastapi.py  requests.py  responses.py
libs/: __init__.py  adapter.py  apps.py  ascii_art.py  batch_run.py  conf.py  datastructures.py  db.py  exception_handlers.py  exceptions.py  fastapi.py  models.py  proxy.py  requests.py  responses.py  run_app.py  serve.py  settings.py
(+379 files in other folders)
