[project]
name = "fastapp"
authors = [{name = "Vincent", email = "jsdtxm@live.com"}]
version = "0.1.0"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "fastapi-cli==0.0.5",
    "fastapi-pagination==0.12.31",
    "uvicorn==0.32.0",
    "orjson==3.10.15",
    "tortoise-orm==0.21.7",
    "aiohttp==3.10.10",
    "colorama==0.4.6",
    "click==8.1.7",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pytz==2024.2",
    "aiosqlite==0.20.0",
    "asyncmy==0.2.9",
    "fastapi-cache2==0.2.2",
    "redis==4.6.0",
    "pyjwt==2.10.1",
    "bcrypt==4.2.1",
    "passlib==1.7.4",
    "python-multipart==0.0.19",
    "cryptography==44.0.0",
    "async-lru==2.0.4",
    "etcd3-py==0.1.6",
    "sqlglot==26.10.1",
]

[project.optional-dependencies]
dev = [
    "mypy==1.13.0",
    "types-pytz==2024.2.0.20241221",
]

[build-system]
requires = ["setuptools>=75.0", "wheel", "nuitka>=2.6.9", "toml"]
build-backend = "nuitka.distutils.Build"

[nuitka]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fastapp"]

[tool.setuptools.package-data]
smaths = ["*.pyi", "**/*.pyi"]